[Report Enhancement] Plugni web fingerprint (passive) overflow bug fixed

--- a/includes/css/stylesheet.css
+++ b/includes/css/stylesheet.css
@@ -432,3 +432,7 @@ body {
     width: 25%;
 }
 /* End of target page toolbar*/
+
+.tab-content {
+    overflow-x: scroll;
+}
